# chameleon-research

./: .gitignore  CHANGELOG.md  PROJECT_ROADMAP.md  PUBLISHING.md  README.md  reference_stats.json
.github/workflows/: ci.yml
configs/: browser_profile.json  default_profile.json  streaming_profile.json
data/: chameleon_stats_v2.json  diagnostic_report.json  reference_stats.json
docs/: API.md  DEPLOYMENT.md  RELEASE-CHECKLIST.md  architecture.md  development-guide.md  e2e-test-plan.md  metrics.md  phase2-checklist.md  phase2.1-report.md  phase2.2-plan.md
python-simulator/: meta_profile_generator_v2.py  metrics_calculator.py  reference_extractor.py  requirements.txt
python-simulator/tests/: test_metrics_calculator.py
rust-core/: Cargo.toml  VALIDATION-COMMANDS.txt
rust-core/benches/: throughput.rs
rust-core/configs/: vpn-client.toml  vpn-server.toml
rust-core/docker/: Dockerfile.client  Dockerfile.server  docker-compose.yml
rust-core/docs/: DPI-RESEARCH.md  VALIDATION-REPORT.md  VPN-SETUP.md
rust-core/examples/: client.rs  server.rs  vpn-client.rs  vpn-server.rs
rust-core/scripts/: capture-handshake.sh  capture-traffic-bulk.sh  capture-traffic.sh  compare-packets.sh  deploy-phase8.sh  generate_reference.py  ja3_analysis.py  packet_size_analysis.py  timing_analysis.py  validate-all.sh
rust-core/src/: lib.rs  main.rs
rust-core/src/crypto/: cipher.rs  hkdf.rs  mod.rs
rust-core/src/frame/: mod.rs  model.rs
rust-core/src/transport/: dpi.rs  handshake.rs  http2.rs  mod.rs  quic.rs  reconnect.rs  shaper.rs
rust-core/src/tun/: dns.rs  keepalive.rs  mod.rs  route.rs
rust-core/src/weaver/: engine.rs  mod.rs
rust-core/tests/: crypto_tests.rs  dpi_tests.rs  e2e_tests.rs  frame_tests.rs  integration_tests.rs  network_tests.rs  phase8_tests.rs  smoke_test.rs.del  transport_tests.rs  tun_tests.rs
