[package]
name = "chameleon-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "chameleon_core"
path = "src/lib.rs"

[[bin]]
name = "chameleon-core"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
rand = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[dev-dependencies]
approx = "0.5"
