[package]
name = "chameleon-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "chameleon_core"
path = "src/lib.rs"

[[bin]]
name = "chameleon-core"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
rand = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "io-util"] }
chacha20poly1305 = "0.10"
aead = "0.5"
hkdf = "0.12"
sha2 = "0.10"
serde_json = "1.0"

# Transport (Phase 2.2)
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rcgen = "0.13"
h2 = "0.4"
http = "1"
bytes = "1"
tokio-rustls = "0.26"

[dev-dependencies]
approx = "0.5"
